--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,26 +6,61 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.10.0 <4.0.0" 
+  sdk: ">=3.10.0 <4.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  intl: ^0.19.0
+  flutter_vibrate: ^1.3.0
 
   # Networking
   http: ^1.2.0
 
   # Location (to get current GPS position)
   geolocator: ^12.0.0
+  geocoding: ^3.0.0
 
   # Local storage for caching last weather data etc.
   shared_preferences: ^2.2.2
+
+  # Connectivity monitoring
+  connectivity_plus: ^5.0.2
+
+  # Shimmer loading effect
+  shimmer: ^3.0.0
+
+  # Charts for temperature and precipitation visualization
+  fl_chart: ^0.69.0
+
+  # Home screen widget
+  home_widget: ^0.6.0
+
+  # Notifications
+  flutter_local_notifications: ^18.0.1
+  timezone: ^0.9.4
+  permission_handler: ^11.3.1
+
+  # Sharing
+  share_plus: ^10.1.2
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: false
+  image_path: "assets/auroclime_icon.png"
+  adaptive_icon_background: "#0B1020"
+  adaptive_icon_foreground: "assets/auroclime_icon.png"
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/auroclime_icon.png
